Implemented MapStruck library instead of custom UserMapper class.